Update environment.yml file

--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,10 @@
-name: pytorch_inference_old
+name: pytorch_inference
 channels:
         - conda-forge
         - pytorch
 dependencies:
         - jupyter
-        - pytorch==0.4.1
+        - pytorch
         - torchvision
         - pip
         - numpy
