Revise environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
         - pytorch
 dependencies:
         - jupyter
-        - pytorch==1.0.0
+        - pytorch
         - torchvision
         - pip
         - numpy
